[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-flow = { path = "../yew-flow" }
log = "0.4"
stylist = { version = "0.10", features = ["yew_integration"] }
wasm-logger = "0.2.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
serde = "1.0"
serde_json = "1.0"
web-sys = { version = "0.3", features = ["DomRect", "Element"] }
anyhow = "1.0.58"
